# digitalMe

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/data_preprocessors/: data_preprocess_augment.py  gpt_data_simplifier.py
backend/src/: main.py
backend/src/data_preprocessors/: gpt_data_simplifier.py
backend/src/logging_service/: logger.py
backend/src/settings/: config.py
backend/src/vector_data_handler/: db.py  processor.py
backend/utils/: chroma_access.py  logger.py
backend/vector_data_handler/: db.py  processor.py
chromadb/: chroma.sqlite3
config/: settings.py
rag-persona-chatbot/: chroma_access.py  pyproject.toml
rag-persona-chatbot/chromadb/: chroma.sqlite3
rag-persona-chatbot/config/: settings.yaml
rag-persona-chatbot/src/: main.py
rag-persona-chatbot/src/core/: config.py  logger.py
rag-persona-chatbot/src/embedding/: embedder.py  vector_store.py
rag-persona-chatbot/src/generation/: generator.py  persona_manager.py
rag-persona-chatbot/src/preprocessing/: classifier.py  data_loader.py
rag-persona-chatbot/src/retrieval/: reranker.py  retriever.py
rag-persona-chatbot/src/utils/: helpers.py
src/: gradio_main.py  main.py
src/chatbot/: qa_bot.py
src/embeddings/: embedder.py
src/models/: __init__.py  data_models.py
src/retriever/: personality_retriever.py
src/services/: __init__.py  chatbot_service.py  embedding_service.py  retriever_service.py  vectorstore_service.py
src/utils/: __init__.py  chroma_access.py  logger.py
src/vectorstore/: chroma_store.py
